--- a/Scholars Academy/Base.lproj/Main.storyboard
+++ b/Scholars Academy/Base.lproj/Main.storyboard
@@ -5,6 +5,7 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
+        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -70,7 +71,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="889.85507246376824" y="205.58035714285714"/>
+            <point key="canvasLocation" x="13" y="206"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="flk-0c-BCT">
@@ -79,13 +80,72 @@
                     <view key="view" contentMode="scaleToFill" id="2SK-lu-9Oj">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0sc-hE-xLF">
+                                <rect key="frame" x="72" y="617" width="271" height="78"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="filled" title="Sign In Sheets">
+                                    <fontDescription key="titleFontDescription" type="boldSystem" pointSize="30"/>
+                                </buttonConfiguration>
+                                <connections>
+                                    <segue destination="EZT-0E-uG8" kind="show" id="fQE-dV-FXR"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="Du8-Cw-B2t"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
+                    <navigationItem key="navigationItem" id="LZn-38-QeR"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="b1U-Uq-D7T" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1838" y="220"/>
+            <point key="canvasLocation" x="2747.826086956522" y="219.64285714285714"/>
+        </scene>
+        <!--Sign In SheetsVC-->
+        <scene sceneID="aKG-9x-YLA">
+            <objects>
+                <viewController id="EZT-0E-uG8" customClass="SignInSheetsVC" customModule="Scholars_Academy" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="77R-1v-pXd">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="UvX-Km-1G3">
+                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="ZA1-nC-gcg">
+                                    <size key="itemSize" width="171" height="185"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="W3p-uc-BZJ">
+                                        <rect key="frame" x="0.0" y="0.0" width="171" height="185"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="CAO-mq-rRL">
+                                            <rect key="frame" x="0.0" y="0.0" width="171" height="185"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </collectionViewCellContentView>
+                                        <size key="customSize" width="171" height="185"/>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="Jxm-KU-zqX"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="UvX-Km-1G3" firstAttribute="top" secondItem="Jxm-KU-zqX" secondAttribute="top" id="CRr-Uq-aec"/>
+                            <constraint firstItem="UvX-Km-1G3" firstAttribute="leading" secondItem="Jxm-KU-zqX" secondAttribute="leading" id="FY5-v0-yfx"/>
+                            <constraint firstItem="Jxm-KU-zqX" firstAttribute="bottom" secondItem="UvX-Km-1G3" secondAttribute="bottom" id="new-5W-9FL"/>
+                            <constraint firstItem="Jxm-KU-zqX" firstAttribute="trailing" secondItem="UvX-Km-1G3" secondAttribute="trailing" id="ytG-KC-NNN"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="3gq-6i-DUQ"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="xzr-4g-ces" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3756.521739130435" y="213.61607142857142"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="rnI-7Q-0sE">
@@ -114,7 +174,6 @@
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="vqP-k2-2mF">
                                 <rect key="frame" x="86" y="296" width="242" height="34"/>
-                                <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
@@ -137,7 +196,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qYe-Ed-vIZ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="889.85507246376824" y="-488.16964285714283"/>
+            <point key="canvasLocation" x="890" y="-102"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="bvg-z7-uJx">
@@ -154,7 +213,6 @@
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="GHg-UG-5wB">
                                 <rect key="frame" x="86" y="296" width="242" height="34"/>
-                                <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
@@ -192,7 +250,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="goI-3N-BI7" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="889.85507246376824" y="906.69642857142856"/>
+            <point key="canvasLocation" x="890" y="577"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Eee-xV-6bF">
@@ -210,7 +268,25 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Gkg-9k-Iaa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-20.289855072463769" y="205.58035714285714"/>
+            <point key="canvasLocation" x="-748" y="206"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="J89-fS-ely">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="QCe-u5-OFf" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="CTr-zd-hAi">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="zCP-1W-Y7Z" kind="relationship" relationship="rootViewController" id="IJR-nN-mrf"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="9cB-df-UTh" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1837.68115942029" y="219.64285714285714"/>
         </scene>
     </scenes>
     <resources>
