--- a/Scholars Academy/Base.lproj/Main.storyboard
+++ b/Scholars Academy/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Zvr-1M-CHx">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="QCe-u5-OFf">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
@@ -110,24 +110,63 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="UvX-Km-1G3">
-                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="UvX-Km-1G3">
+                                <rect key="frame" x="16" y="104" width="382" height="742"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="ZA1-nC-gcg">
-                                    <size key="itemSize" width="171" height="185"/>
+                                    <size key="itemSize" width="161" height="119"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="W3p-uc-BZJ">
-                                        <rect key="frame" x="0.0" y="0.0" width="171" height="185"/>
+                                    <collectionViewCell opaque="NO" multipleTouchEnabled="YES" contentMode="scaleToFill" reuseIdentifier="SheetCell" id="W3p-uc-BZJ" customClass="SheetCell" customModule="Scholars_Academy" customModuleProvider="target">
+                                        <rect key="frame" x="41" y="0.0" width="300" height="200"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="CAO-mq-rRL">
-                                            <rect key="frame" x="0.0" y="0.0" width="171" height="185"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="BZM-RB-h4t">
+                                            <rect key="frame" x="0.0" y="0.0" width="300" height="200"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nyc-9S-nyS">
+                                                    <rect key="frame" x="0.0" y="0.0" width="300" height="200"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Cell Title" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bku-Hp-TpW">
+                                                            <rect key="frame" x="117" y="8" width="66" height="20.5"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Cell Description" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pqO-S7-NhP">
+                                                            <rect key="frame" x="90" y="36.5" width="120.5" height="20.5"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                    <color key="backgroundColor" systemColor="systemBlueColor"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="130" id="83I-WF-7eK"/>
+                                                        <constraint firstAttribute="width" constant="150" id="ABE-15-9zP"/>
+                                                        <constraint firstItem="pqO-S7-NhP" firstAttribute="top" secondItem="bku-Hp-TpW" secondAttribute="bottom" constant="8" id="Cua-kj-Jo6"/>
+                                                        <constraint firstItem="bku-Hp-TpW" firstAttribute="top" secondItem="nyc-9S-nyS" secondAttribute="top" constant="8" id="OVG-7P-qa3"/>
+                                                        <constraint firstItem="pqO-S7-NhP" firstAttribute="centerX" secondItem="nyc-9S-nyS" secondAttribute="centerX" id="r9y-mW-NJl"/>
+                                                        <constraint firstItem="bku-Hp-TpW" firstAttribute="centerX" secondItem="nyc-9S-nyS" secondAttribute="centerX" id="wBJ-v4-2gI"/>
+                                                    </constraints>
+                                                </view>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="nyc-9S-nyS" firstAttribute="leading" secondItem="BZM-RB-h4t" secondAttribute="leading" id="3Mf-Xr-tKC"/>
+                                                <constraint firstAttribute="trailing" secondItem="nyc-9S-nyS" secondAttribute="trailing" id="S2C-Fo-ITR"/>
+                                                <constraint firstAttribute="bottom" secondItem="nyc-9S-nyS" secondAttribute="bottom" id="Vdb-sm-ij3"/>
+                                                <constraint firstItem="nyc-9S-nyS" firstAttribute="top" secondItem="BZM-RB-h4t" secondAttribute="top" id="j1k-PJ-Q2P"/>
+                                            </constraints>
                                         </collectionViewCellContentView>
-                                        <size key="customSize" width="171" height="185"/>
+                                        <size key="customSize" width="300" height="200"/>
+                                        <connections>
+                                            <outlet property="cellDescription" destination="pqO-S7-NhP" id="ABN-80-aZ4"/>
+                                            <outlet property="cellTitle" destination="bku-Hp-TpW" id="DOZ-ZI-CmA"/>
+                                            <outlet property="view" destination="nyc-9S-nyS" id="4IG-7a-5r7"/>
+                                        </connections>
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
@@ -135,13 +174,16 @@
                         <viewLayoutGuide key="safeArea" id="Jxm-KU-zqX"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="UvX-Km-1G3" firstAttribute="top" secondItem="Jxm-KU-zqX" secondAttribute="top" id="CRr-Uq-aec"/>
-                            <constraint firstItem="UvX-Km-1G3" firstAttribute="leading" secondItem="Jxm-KU-zqX" secondAttribute="leading" id="FY5-v0-yfx"/>
-                            <constraint firstItem="Jxm-KU-zqX" firstAttribute="bottom" secondItem="UvX-Km-1G3" secondAttribute="bottom" id="new-5W-9FL"/>
-                            <constraint firstItem="Jxm-KU-zqX" firstAttribute="trailing" secondItem="UvX-Km-1G3" secondAttribute="trailing" id="ytG-KC-NNN"/>
+                            <constraint firstItem="UvX-Km-1G3" firstAttribute="top" secondItem="Jxm-KU-zqX" secondAttribute="top" constant="16" id="CRr-Uq-aec"/>
+                            <constraint firstItem="UvX-Km-1G3" firstAttribute="leading" secondItem="Jxm-KU-zqX" secondAttribute="leading" constant="16" id="FY5-v0-yfx"/>
+                            <constraint firstItem="Jxm-KU-zqX" firstAttribute="bottom" secondItem="UvX-Km-1G3" secondAttribute="bottom" constant="16" id="new-5W-9FL"/>
+                            <constraint firstItem="Jxm-KU-zqX" firstAttribute="trailing" secondItem="UvX-Km-1G3" secondAttribute="trailing" constant="16" id="ytG-KC-NNN"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="3gq-6i-DUQ"/>
+                    <connections>
+                        <outlet property="SignInSheetCollection" destination="UvX-Km-1G3" id="jbk-gh-sTF"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xzr-4g-ces" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -292,6 +334,9 @@
     <resources>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemBlueColor">
+            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
