--- a/Scholars Academy/Base.lproj/Main.storyboard
+++ b/Scholars Academy/Base.lproj/Main.storyboard
@@ -72,10 +72,10 @@
             </objects>
             <point key="canvasLocation" x="889.85507246376824" y="205.58035714285714"/>
         </scene>
-        <!--View Controller-->
+        <!--Schedule View Controller-->
         <scene sceneID="flk-0c-BCT">
             <objects>
-                <viewController id="zCP-1W-Y7Z" sceneMemberID="viewController">
+                <viewController id="zCP-1W-Y7Z" customClass="ScheduleViewController" customModule="Scholars_Academy" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="2SK-lu-9Oj">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -116,7 +116,11 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="N3L-jq-uAC">
-                        <barButtonItem key="rightBarButtonItem" title="Log Out" id="cAF-C8-wNh"/>
+                        <barButtonItem key="rightBarButtonItem" title="Log Out" id="cAF-C8-wNh">
+                            <connections>
+                                <action selector="logOutPressed:" destination="zCP-1W-Y7Z" id="NM0-ue-o3Q"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="b1U-Uq-D7T" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -155,10 +159,10 @@
             </objects>
             <point key="canvasLocation" x="2725" y="581"/>
         </scene>
-        <!--View Controller-->
+        <!--Sign In View Controller-->
         <scene sceneID="rnI-7Q-0sE">
             <objects>
-                <viewController id="iwR-Cq-oVF" sceneMemberID="viewController">
+                <viewController id="iwR-Cq-oVF" customClass="SignInViewController" customModule="Scholars_Academy" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="redraw" id="zNa-3z-Iov">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -174,16 +178,19 @@
                                 <buttonConfiguration key="configuration" style="filled" title="Login">
                                     <fontDescription key="titleFontDescription" type="boldSystem" pointSize="30"/>
                                 </buttonConfiguration>
+                                <connections>
+                                    <action selector="loginPressed:" destination="iwR-Cq-oVF" eventType="touchUpInside" id="49G-2F-UX3"/>
+                                </connections>
                             </button>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email address" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="3Lk-qJ-ebA">
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="getnetmekuriyaw@gmail.com" borderStyle="roundedRect" placeholder="Email address" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="3Lk-qJ-ebA">
                                 <rect key="frame" x="86" y="238" width="242" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="vqP-k2-2mF">
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="getnet12" borderStyle="roundedRect" placeholder="Password" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="vqP-k2-2mF">
                                 <rect key="frame" x="86" y="296" width="242" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                             </textField>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="YlY-9K-2oh"/>
@@ -202,6 +209,8 @@
                     </view>
                     <navigationItem key="navigationItem" id="e0t-lq-9cP"/>
                     <connections>
+                        <outlet property="emailTextField" destination="3Lk-qJ-ebA" id="bPf-DF-Ffy"/>
+                        <outlet property="passwordTextField" destination="vqP-k2-2mF" id="Wqq-d8-jkp"/>
                         <segue destination="zCP-1W-Y7Z" kind="show" identifier="onLogin" id="g02-y2-JhV"/>
                     </connections>
                 </viewController>
@@ -209,10 +218,10 @@
             </objects>
             <point key="canvasLocation" x="889.85507246376824" y="-488.16964285714283"/>
         </scene>
-        <!--View Controller-->
+        <!--Sign Up View Controller-->
         <scene sceneID="bvg-z7-uJx">
             <objects>
-                <viewController id="Ovp-wB-v1G" sceneMemberID="viewController">
+                <viewController id="Ovp-wB-v1G" customClass="SignUpViewController" customModule="Scholars_Academy" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Hvo-Hy-ozY">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -225,7 +234,7 @@
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="GHg-UG-5wB">
                                 <rect key="frame" x="86" y="296" width="242" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WbU-Pc-dlD">
                                 <rect key="frame" x="120" y="354" width="174" height="60"/>
@@ -240,6 +249,9 @@
                                 <buttonConfiguration key="configuration" style="filled" title="Sign Up">
                                     <fontDescription key="titleFontDescription" type="boldSystem" pointSize="30"/>
                                 </buttonConfiguration>
+                                <connections>
+                                    <action selector="signUpPressed:" destination="Ovp-wB-v1G" eventType="touchUpInside" id="hU8-cb-jNq"/>
+                                </connections>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="0dK-P2-Xmb"/>
@@ -259,7 +271,10 @@
                     </view>
                     <navigationItem key="navigationItem" id="Se1-WZ-OVd"/>
                     <connections>
-                        <segue destination="zCP-1W-Y7Z" kind="show" identifier="onSignUP" id="t3r-JH-22u"/>
+                        <outlet property="emailTextField" destination="um1-78-Xp8" id="knr-qn-2AV"/>
+                        <outlet property="passwordTextField" destination="GHg-UG-5wB" id="hbZ-qa-tuZ"/>
+                        <outlet property="signUpButton" destination="WbU-Pc-dlD" id="Ny6-JB-9qn"/>
+                        <segue destination="zCP-1W-Y7Z" kind="show" identifier="onSignUp" id="t3r-JH-22u"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="goI-3N-BI7" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
